# agentXcpp

./: .gitignore  AUTHORS  ChangeLog  Jamroot  LICENSE  Makefile  Makefile.am  README  README.md  SConstruct  TODO  api.doxyfile  autogen.sh  configure.ac  create-release.py  create-release.sh  doxygen.conf  getversion.py  index.html  integer.cpp  main.cpp  octet_string.cpp  octet_string.h  oid.cpp  oid.h  types.h  varbind.cpp  varbind.h  variable.h
doc/: CHAP-MIB.txt  Makefile  SConscript  SConstruct  api.doxyfile  api.mainpage  buildsystem.dox  documentation.dox  exceptions.dox  getting_started.dox  how_to_add_rw_support.dox  how_to_create_releases.dox  how_to_implement_tables.dox  how_to_send_notifications.dox  how_to_write_a_subagent.dox  howto.dox  installing.dox  internal.doxyfile  internals.doxyfile  internals.mainpage  license.dox  parsing.dox  pdus.dox  release_howto.dox  request_handling.dox  serializing.dox  subagent_howto.dox  todo.dox  tutor_1_ro_variables.dox  tutor_2_rw_variables.dox  tutor_3_notifications.dox  variables.dox  writeable_var_rw_howto.dox
docs/0.1.1/api/html/: annotated.html  annotated.js  classagentxcpp_1_1_counter32-members.html  classagentxcpp_1_1_counter32.html  classagentxcpp_1_1_counter32.js  classagentxcpp_1_1_counter32__inherit__graph.md5  classagentxcpp_1_1_counter64-members.html  classagentxcpp_1_1_counter64.html  classagentxcpp_1_1_counter64.js  classagentxcpp_1_1_counter64__inherit__graph.map  classagentxcpp_1_1_gauge32-members.html  classagentxcpp_1_1_gauge32.html  classagentxcpp_1_1_gauge32.js  classagentxcpp_1_1_gauge32__inherit__graph.map  classagentxcpp_1_1_gauge32__inherit__graph.md5  classagentxcpp_1_1_integer-members.html  classagentxcpp_1_1_integer.html  classagentxcpp_1_1_integer.js  (+74 more)
docs/0.3/api/: doxygen_sqlite3.db
docs/0.3/internals/: doxygen_sqlite3.db
examples/: Makefile.am  SConscript  main.cpp
site_scons/site_tools/doxygen/: .hg_archival.txt  .hgignore  doxygen.py
site_scons/site_tools/qt4/: .hg_archival.txt
src/: AbstractValue.hpp  AbstractVariable.hpp  AddAgentCapsPDU.cpp  AddAgentCapsPDU.hpp  CleanupSetPDU.hpp  ClosePDU.cpp  ClosePDU.h  ClosePDU.hpp  CommitSetPDU.hpp  Counter32.cpp  Counter32.h  Counter32.hpp  Counter32Value.cpp  Counter32Value.hpp  Counter32Variable.cpp  Counter32Variable.hpp  Counter64.cpp  Counter64.h  Counter64.hpp  Counter64Value.cpp  Counter64Value.hpp  Counter64Variable.cpp  Counter64Variable.hpp  DisplayStringVariable.hpp  Gauge32.cpp  Gauge32.h  Gauge32.hpp  Gauge32Value.cpp  Gauge32Value.hpp  Gauge32Variable.cpp  Gauge32Variable.hpp  GetBulkPDU.cpp  GetBulkPDU.hpp  GetNextPDU.cpp  GetNextPDU.hpp  GetPDU.cpp  GetPDU.h  GetPDU.hpp  IndexAllocatePDU.cpp  IndexAllocatePDU.hpp  (+123 more)
unit_tests/: IntegerTest.cpp  SConscript  main.cpp
(+4548 files in other folders)
