lib_LTLIBRARIES = libagentXcpp.la

libagentXcpp_la_SOURCES = ClosePDU.cpp \
                          Gauge32.cpp \
                          Octet_String.cpp \
                          OpenPDU.cpp \
                          session.cpp \
                          Counter32.cpp \
                          Integer.cpp \
                          oid.cpp \
                          PDU.cpp \
                          TimeTicks.cpp \
                          Counter64.cpp \
                          IpAddress.cpp \
                          Opaque.cpp \
                          RegisterPDU.cpp \
                          varbind.cpp

library_includedir=$(includedir)/agentXcpp
library_include_HEADERS = ClosePDU.h \
                          Gauge32.h \
                          Octet_String.h \
                          PDU.h \
                          types.h \
                          Counter32.h \
                          helper.h \
                          oid.h \
                          RegisterPDU.h \
                          varbind.h \
                          Counter64.h \
                          Integer.h \
                          Opaque.h \
                          session.h \
                          variable.h \
                          exceptions.h \
                          IpAddress.h \
                          OpenPDU.h \
                          TimeTicks.h

libagentXcpp_la_LDFLAGS = -version-info 1:0:0
